<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name" translatable="false">GEO Voice Transcriptor</string>
    <string name="record">Grabar</string>
    <string name="stop">Detener</string>
    <string name="pause">Pausar</string>
    <string name="resume">Continuar</string>
    <string name="result">Resultado</string>
    <string name="copy_text">Copiar</string>
    <string name="clear_all">Borrar todo</string>
    <string name="load_template">Cargar plantilla</string>
    <string name="export_to">Exportar a</string>
    <string name="export_to_pdf">PDF</string>
    <string name="export_to_docx">Word</string>
    <string name="export_to_xlsx">Excel</string>
    <string name="export_to_txt">TXT</string>
    <string name="settings">Configuraciones</string>
    <string name="about">Acerca de</string>

    <!-- Settings -->
    <string name="theme_preference_title">Tema de la app</string>
    <string name="theme_preference_summary">Tema seleccionado: %s</string>
    <string name="visualizer_switch_title">Activar el visualizador</string>
    <string name="visualizer_switch_summary">Visualizador: %1$s</string>
    <string name="narrator_switch_title">Activar el narrador</string>
    <string name="narrator_switch_summary">Narrador: %1$s</string>
    <string name="line_command_title">Comando de voz</string>
    <string name="line_command_summary">Comando definido: %1$s</string>
    <string name="templates_title">Plantillas</string>
    <string name="templates_summary">Personalizar plantillas</string>
    <string name="templates_alert_title">Seleccionar plantilla</string>
    <string name="reset_preferences_title">Valores predeterminados</string>
    <string name="reset_preferences_alert_title">Reestablecer valores predeterminados</string>
    <string name="reset_preferences_alert_message">¿Está seguro de que desea restablecer las configuraciones a sus valores predeterminados?</string>
    <string name="on">Activado</string>
    <string name="off">Desactivado</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <!-- Templates -->
    <string name="field_name">Campo</string>
    <string name="add_field">Agregar campo</string>
    <string name="delete_field">Eliminar Campo</string>
    <string name="add_template">Agregar plantilla</string>
    <string name="save_template">Guardar plantilla</string>
    <string name="template_label">Nombre de la plantilla</string>

    <!-- About -->
    <string name="description">Este proyecto está enfocado en la transcripción de voz a texto, adicionalmente con la capacidad de rellenar formularios personalizables y exportarlos a varios formatos.</string>
    <string name="version">Versión: %1$s</string>
    <string name="developer">Desarrollador: https://github.com/jahirxtrap</string>
    <string name="web_developer">Desarrollador web: https://github.com/DiegoFernandoLojanTN</string>
    <string name="researcher">Investigadora: https://github.com/cftr28</string>
    <string name="repository">Repositorio: https://github.com/jahirxtrap/GeoVoiceTranscriptor</string>
    <string name="website">Página web: https://diegofernandolojantn.github.io/GeoVoiceTranscriptorWeb/</string>
    <string name="credits">Créditos: https://github.com/alphacep/vosk-android-demo</string>
    <string name="logo">Logo</string>
    <string name="profile_dev">Developer</string>
    <string name="profile_web">Web developer</string>
    <string name="profile_res">Researcher</string>
    <string name="info">Información de la app</string>

    <!-- Messages -->
    <string name="recording">Grabando…</string>
    <string name="failed">Carga fallida</string>
    <string name="export_success">Archivo guardado con éxito</string>
    <string name="export_error">Error al guardar el archivo</string>
</resources>