<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/copy_text" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="101"
        android:title="@string/clear_all" />
    <item
        android:id="@+id/action_load_template"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="102"
        android:title="@string/load_template"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="103"
        android:title="@string/export_to">
        <menu>
            <item
                android:id="@+id/action_export_pdf"
                android:orderInCategory="104"
                android:title="@string/export_to_pdf" />
            <item
                android:id="@+id/action_export_docx"
                android:orderInCategory="105"
                android:title="@string/export_to_docx" />
            <item
                android:id="@+id/action_export_csv"
                android:orderInCategory="106"
                android:title="@string/export_to_csv" />
            <item
                android:id="@+id/action_export_txt"
                android:orderInCategory="107"
                android:title="@string/export_to_txt" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="108"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="109"
        android:title="@string/about" />
</menu>