<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/icon_background"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_foreground" />
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="?attr/colorSurfaceContainerLowest"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/profile_dev_image"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/profile_dev" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:id="@+id/developer_link"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:autoLink="web"
                            android:gravity="center"
                            android:text="@string/developer"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/m3_card_stroke_color"
                        tools:ignore="PrivateResource" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/profile_web_image"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/profile_web" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/web_developer_link"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:autoLink="web"
                            android:gravity="center"
                            android:text="@string/web_developer"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/m3_card_stroke_color"
                        tools:ignore="PrivateResource" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/profile_res_image"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/profile_res" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/researcher_link"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:autoLink="web"
                            android:gravity="center"
                            android:text="@string/researcher"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/repository_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/repository"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/website_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/website"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/credits_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/credits"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textAllCaps="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>